--- a/ArabianAutomobiles/css/style.css
+++ b/ArabianAutomobiles/css/style.css
@@ -44,6 +44,57 @@ img {
     max-width: 100%;
 }
 
+/*==== loader ====*/
+
+.lds-ripple {
+    display: inline-block;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 45vh;
+    right: 27vw;
+    z-index: 1;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #ff9800;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
 
 /*===============================================*/
 
@@ -142,6 +193,7 @@ body.gameOn .carDetailsWrapper{
     position: absolute;
     top: 3.385vw;
     left:3.385vw;
+    z-index: 3;
 }
 .carDetailsSection h3 {
     font-size: 2.135vw;
@@ -188,6 +240,8 @@ body.gameOn .carDetailsWrapper{
     -webkit-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
+    position: relative;
+    z-index: 2;
 }
 .displayImg img.hide{
     opacity: 0;
@@ -196,6 +250,7 @@ body.gameOn .carDetailsWrapper{
 	position: absolute;
 	bottom: 3.385vw;
     left:3.385vw;
+    z-index: 3;
 }
 .colorPatterns > div {
     display: inline-block;
@@ -227,6 +282,7 @@ body.gameOn .carDetailsWrapper{
     position: absolute;
     bottom: 3.385vw;
     right: 3.385vw;
+    z-index: 3;
 }
 .navigation > ul:after{
     content: "";
